# bananagan

./: .gitignore  README.md  pyproject.toml
examples/: demo1.py  demo2.py  demo3.py
src/bananagan/: __init__.py  bananagan.py
src/bananagan/models/: __init__.py
src/bananagan/models/pix2pixHD/: __init__.py  base_model.py  pix2pixHD.py
src/bananagan/models/pix2pixHD/options/: base_options.py  test_options.py
src/bananagan/models/pix2pixHD/util/: data_utils.py  networks.py
src/bananagan/utils/: __init__.py  processing_utils.py
